k8s_backup_local_setup/backend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: backend-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: backend
  template:
    metadata:
      labels:
        app: backend
    spec:
      containers:
      - name: backend
        image: alainredacre/baccend:8c322d2e92d8a52ad4b9390fb5eb58212521ba2b
        ports:
        - containerPort: 3000
