k8s_backup_local_setup/frontend-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: frontend-deployment
  namespace: default
spec:
  replicas: 1
  selector:
    matchLabels:
      app: frontend
  template:
    metadata:
      labels:
        app: frontend
    spec:
      containers:
      - name: frontend
        image: alainredacre/tfacca:8c322d2e92d8a52ad4b9390fb5eb58212521ba2b
        ports:
        - containerPort: 80
