k8s_backup_local_setup/backend-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: backend-ingress
  namespace: default
spec:
  rules:
  - http:
      paths:
      - path: /increment
        pathType: Prefix
        backend:
          service:
            name: backend-service
            port:
              number: 3000
